# ICS4U-Final-ATLAS2

./: .gitignore  LICENSE  Makefile  README.md  atlas2.py  dashboard.py  data.py  inference.py  main.py  mo_e_design_document.md  pyproject.toml  requirements.txt  test_moe_system.py
.github/workflows/: ci.yml
docs/: auto_tuning.md
src/: __init__.py  atlas2.py  atlas_moe.py  atlas_moe_pipeline.py  auto_tuning.py  data.py  data_fingerprint.py  data_minute.py  expert_kernels.py  inference.py  moe_gating.py  validation.py
tests/: atlas_performance_test.py  conftest.py  pytest.ini  test_atlas2.py  test_auto_tuning.py  test_dashboard.py  test_data.py
